Weaken assertion so that it doesn't fire.  (Bug 472353)  r+sr=bzbarsky